--- a/index.html
+++ b/index.html
@@ -22,15 +22,15 @@
         <section class="hero-section">
             <img src="./img/hero-img.svg" alt="">
             <div>
-                <h1>Crie algo <span class="text-primary">Impactante</span> com musica</h1>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsam dolore iure possimus quisquam omnis alias ducimus necessitatibus dignissimos. Expedita culpa reprehenderit, minus illo commodi provident quo minima amet praesentium dolores.</p>
+                <h1 class="mt-2">Crie algo <span class="text-primary decoration">Impactante</span> com musica</h1>
+                <p class="mt-2 mb-2">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsam dolore iure possimus quisquam omnis alias ducimus necessitatibus dignissimos. Expedita culpa reprehenderit, minus illo commodi provident quo minima amet praesentium dolores.</p>
                 <a href="#" class="button ">Comece agora</a>
             </div>
         </section>
         <section class="couse-section">
             <div class="cards">
 
-                <article>
+                <article class="card">
                     <img src="./img/piano.png" alt="icone de teclas de piano">
                     <strong>Piano popular</strong>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
@@ -38,7 +38,7 @@
                         <img src="./img/arrow-right.svg" alt="ir para pagina do curso">
                     </a>
                 </article> 
-                <article>
+                <article class="card">
                     <img src="./img/clef.png" alt="icone da clave de sol">
                     <strong>Teoria musical</strong>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
@@ -46,7 +46,7 @@
                         <img src="./img/arrow-right.svg" alt="ir para pagina do curso">
                     </a>
                 </article>   
-                <article>
+                <article class="card">
                     <img src="./img/sax.png" alt="icone de saxofone">
                     <strong>Sax alto</strong>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
@@ -54,7 +54,7 @@
                         <img src="./img/arrow-right.svg" alt="ir para pagina do curso">
                     </a>
                 </article>   
-                <article>
+                <article class="card">
                     <img src="./img/drums.png" alt="icone de bateria">
                     <strong>Bateria</strong>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
@@ -64,8 +64,8 @@
                 </article>   
             </div>
             
-            <h2>E <span class="text-primary">varios</span> outros!</h2>
-            <a href="#">Conhecer cursos</a>
+            <h2 class="text-center">E <span class="text-primary">varios</span> outros!</h2>
+            <a href="#" class="button mt-2 mx-auto">Conhecer cursos</a>
         </section>
     </main>
     <footer>
@@ -79,7 +79,7 @@
             <a href="#">Eventos</a>
             <a href="#">Contato</a>
         </nav>
-        <form>
+        <form class="newsletter-form">
             <label for="email">Receba materiais gratuitos no seu email</label>
             <input type="text" name="email" id="email" placeholder="Digite o seu e-mail">
         </form>
